pin this version to a specific neo test release

--- a/bin/install
+++ b/bin/install
@@ -2,5 +2,5 @@
 dir="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && pwd )"
 cd "${dir}/..";
 if [ ! -d 'neo4j-test-server' ]; then
-  git clone https://github.com/loop-recur/neo4j-test-server.git --depth=1
+  git clone --depth=1 --branch 2.0.0.1 https://github.com/loop-recur/neo4j-test-server.git
 fi
